--- a/src/VisualStudio/Core/Def/ServicesVSResources.resx
+++ b/src/VisualStudio/Core/Def/ServicesVSResources.resx
@@ -1375,19 +1375,19 @@ I agree to all of the foregoing:</value>
     <comment>Adding an element to a list</comment>
   </data>
   <data name="Callsite" xml:space="preserve">
-    <value>Callsite</value>
+    <value>Call site</value>
   </data>
   <data name="Add_Parameter" xml:space="preserve">
     <value>Add Parameter</value>
   </data>
   <data name="Callsite_Value" xml:space="preserve">
-    <value>Callsite Value</value>
+    <value>Call site value:</value>
   </data>
   <data name="Parameter_Name" xml:space="preserve">
-    <value>Parameter Name</value>
+    <value>Parameter name:</value>
   </data>
   <data name="Type_Name" xml:space="preserve">
-    <value>Type Name</value>
+    <value>Type name:</value>
   </data>
   <data name="Live_Share_CSharp_Visual_Basic_Language_Server_Client" xml:space="preserve">
     <value>Live Share C#/Visual Basic Language Server Client</value>
