--- a/src/EditorFeatures/Core/xlf/EditorFeaturesResources.zh-Hans.xlf
+++ b/src/EditorFeatures/Core/xlf/EditorFeaturesResources.zh-Hans.xlf
@@ -142,6 +142,11 @@
         <target state="new">Current Solution</target>
         <note />
       </trans-unit>
+      <trans-unit id="Symbol_search_current_solutions_dependencies">
+        <source>Current Solution's dependencies</source>
+        <target state="new">Current Solution's dependencies</target>
+        <note />
+      </trans-unit>
       <trans-unit id="Symbol_search_known_solution">
         <source>'{0}' Solution</source>
         <target state="new">'{0}' Solution</target>
