Apply suggestions from code review
Co-Authored-By: Jason Malinowski <jason@jason-m.com>

--- a/src/VisualStudio/Core/Def/ServicesVSResources.resx
+++ b/src/VisualStudio/Core/Def/ServicesVSResources.resx
@@ -1389,7 +1389,7 @@ I agree to all of the foregoing:</value>
   <data name="Add_Parameter" xml:space="preserve">
     <value>Add Parameter</value>
   </data>
-  <data name="Callsite_Value" xml:space="preserve">
+  <data name="Call_site_value" xml:space="preserve">
     <value>Call site value:</value>
   </data>
   <data name="Parameter_Name" xml:space="preserve">
