--- a/src/VisualStudio/Core/Def/ServicesVSResources.resx
+++ b/src/VisualStudio/Core/Def/ServicesVSResources.resx
@@ -1406,7 +1406,7 @@ I agree to all of the foregoing:</value>
     <value>&lt;new&gt;</value>
   </data>
   <data name="ChangeSignature_NewParameterIntroduceTODOVariable" xml:space="preserve">
-    <value>&lt;TODO&gt;</value>
+    <value>TODO</value>
     <comment>"TODO" is an indication that there is work to be done still</comment>
   </data>
   <data name="Added_Parameter" xml:space="preserve">
