--- a/src/Compilers/VisualBasic/Portable/VBResources.resx
+++ b/src/Compilers/VisualBasic/Portable/VBResources.resx
@@ -5570,4 +5570,10 @@
   <data name="WRN_AttributeNotSupportedInVB_Title" xml:space="preserve">
     <value>Attribute is not supported in VB</value>
   </data>
+  <data name="FEATURE_CheckedExpressions" xml:space="preserve">
+    <value>Checked Expressions</value>
+  </data>
+  <data name="FEATURE_UncheckedExpressions" xml:space="preserve">
+    <value>Unchecked Expressions</value>
+  </data>
 </root>
