--- a/src/Compilers/VisualBasic/Portable/xlf/VBResources.pt-BR.xlf
+++ b/src/Compilers/VisualBasic/Portable/xlf/VBResources.pt-BR.xlf
@@ -42,6 +42,11 @@
         <target state="translated">comentários após a continuação da linha</target>
         <note />
       </trans-unit>
+      <trans-unit id="FEATURE_UncheckedExpressions">
+        <source>Unchecked Expressions</source>
+        <target state="new">Unchecked Expressions</target>
+        <note />
+      </trans-unit>
       <trans-unit id="FEATURE_UnconstrainedTypeParameterInConditional">
         <source>unconstrained type parameters in binary conditional expressions</source>
         <target state="translated">parâmetros de tipo irrestritos em expressões condicionais binárias</target>
